--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "axios": "^0.19.2",
     "concurrently": "^5.1.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.2",
     "pg": "^7.12.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
@@ -19,8 +18,7 @@
     "sequelize": "^5.21.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "start-dev": "concurrently \"npm run start\" \"nodemon server\"",
+    "start": "concurrently \"react-scripts start\" \"nodemon server\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
