--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "concurrently": "^5.1.0",
     "express": "^4.17.1",
+    "nodemon": "^2.0.2",
     "pg": "^7.12.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
