--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "concurrently": "^5.1.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.2",
     "pg": "^7.12.1",
     "react": "^16.13.0",
